--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "redis": "^5.8.2"
+    "redis": "^5.8.2",
+    "vite": "^7.1.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
