--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.21",
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "postcss": "^8.5.6",
     "redis": "^5.8.2",
+    "tailwindcss": "^4.1.12",
     "vite": "^7.1.4"
   },
   "devDependencies": {
